Fixed work with files and reworked output of comments
