# internal/routes/routes.go
@@ -55,7 +55,7 @@ func Setup(app *fiber.App, emailSender mail.EmailSender) {
 	app.Post("/api/setReaction", controllers.SetReaction)
 
 	app.Post("/api/createComment", controllers.CreateComment)
-	app.Get("/api/getChildComments/:id", controllers.GetChildComments)
+	app.Get("/api/getPostComments", controllers.GetPostComments)
 	app.Delete("/api/deleteComment/:id", controllers.DeleteComment)
 
 	app.Post("/api/uploadFile", controllers.UploadFile)
